# best-of-n-dreamer-rssm-latent-dynamics

./: .gitignore  README.md  pyproject.toml  requirements.txt  sitecustomize.py
docs/: claims.md  differentiation_from_best_of_n_wam.md  differentiation_from_prior_projects.md  differentiation_from_wam.md  final_audit.md  reviewer_attacks.md  theory.md
experiments/: __init__.py  common.py  exact_law_validation.py  experiment_a_toy_mismatch.py  experiment_b_learned_rssm.py  experiment_c_belief_collapse.py  experiment_d_horizon_budget.py  experiment_e_repairs.py  experiment_f_closed_loop_planning.py  experiment_g_label_budget_ablation.py  experiment_h_ood_stress_grid.py  experiment_i_gymnasium_stochastic_benchmarks.py  experiment_j_belief_interventions.py  experiment_k_classic_control_benchmarks.py  leakage_audit.py  multiseed_evidence.py  selected_tail_estimator_validation.py  tail_diagnostics.py
latent_dynamics_best_of_n/: __init__.py
paper/: abstract.md  build_submission.ps1  checklist.md  experiments.md  intro.md  limitations.md  main.tex  method.md  references.bib  related_work.md  theory.md
results/: claims_status.json  claims_status.md  experiment_a_toy_mismatch.json  experiment_b_learned_rssm.json  experiment_c_belief_collapse.json  experiment_d_horizon_budget.json  experiment_e_repairs.json  experiment_f_closed_loop_planning.json  experiment_g_label_budget_ablation.json  experiment_h_ood_stress_grid.json  experiment_i_gymnasium_benchmarks.json  experiment_j_belief_interventions.json  experiment_k_classic_control_benchmarks.json  leakage_audit.json  (+4 more)
(+52 files in other folders)
